<resources>
    <string name="app_name">PokeApiKotlin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_of_pokemon">Name of Pokemon</string>
    <string name="error_getting_data">Failed to get data</string>
    <string name="id">ID:</string>
    <string name="name">Name:</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="base_experience">Base Experience:</string>
    <string name="move">Move:</string>
    <string name="ability">Ability:</string>
    <string name="type">Type:</string>
</resources>